[Feat] 파비콘 추가

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="ko-KR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="shortcut icon" href="/favicon/done.svg" type="image/x-icon" />
     <link
       href="https://font.elice.io/css?family=Elice+Digital+Baeum"
       rel="stylesheet"
