[Feat] 파비콘 수정, 다크모드/라이트모드에 따른 파비콘 변경 설정

--- a/index.html
+++ b/index.html
@@ -2,7 +2,18 @@
 <html lang="ko-KR">
   <head>
     <meta charset="UTF-8" />
-    <link rel="shortcut icon" href="/favicon/done.svg" type="image/x-icon" />
+    <link
+      rel="shortcut icon"
+      href="/favicon/favicon.png"
+      type="image/x-icon"
+      media="(prefers-color-scheme: light)"
+    />
+    <link
+      rel="shortcut icon"
+      href="/favicon/favicon-white.png"
+      type="image/x-icon"
+      media="(prefers-color-scheme: dark)"
+    />
     <link
       href="https://font.elice.io/css?family=Elice+Digital+Baeum"
       rel="stylesheet"
